@@ -19,6 +19,7 @@ package org.apache.tomcat.util.compat;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Deque;
@@ -26,6 +27,7 @@ import java.util.Locale;
 import java.util.jar.JarFile;
 import java.util.zip.GZIPOutputStream;
 
+import javax.annotation.Resource;
 import javax.net.ssl.SSLEngine;
 import javax.net.ssl.SSLServerSocket;
 
@@ -128,7 +130,7 @@ public class JreCompat {
         return true;
     }
 
-    
+
     @SuppressWarnings("unused")
     public GZIPOutputStream getFlushableGZipOutputStream(OutputStream os) {
         throw new UnsupportedOperationException(
@@ -236,5 +238,17 @@ public class JreCompat {
 
     public int jarFileRuntimeMajorVersion() {
         return RUNTIME_MAJOR_VERSION;
+    }
+
+
+    public boolean isCommonsAnnotations1_1Available() {
+        Class<Resource> clazz = Resource.class;
+        Method[] methods = clazz.getDeclaredMethods();
+        for (Method method : methods) {
+            if (method.getName().equals("lookup")) {
+                return true;
+            }
+        }
+        return false;
     }
 }
