@@ -126,6 +126,9 @@
       <allow pkg="org.apache.tomcat.jni"/>
       <allow pkg="org.apache.tomcat.util"/>
       <disallow pkg="org.apache.util.scan"/>
+      <subpackage name="compat">
+        <allow pkg="javax.annotation"/>
+      </subpackage>
       <subpackage name="scan">
         <allow pkg="org.apache.tomcat" exact-match="true"/>
       </subpackage>
