@@ -123,7 +123,13 @@ or by placing them in JAR files in the "lib" directory.
 
 To override the XML parser implementation or interfaces, use the endorsed
 mechanism of the JVM. The default configuration defines JARs located in
-"endorsed" as endorsed. This mechanism is no longer supported with Java 9.
+"$CATALINA_HOME/endorsed" as endorsed. This mechanism is no longer supported
+with Java 9.
+
+When running on Java 6, the Common Annotations 1.0 implementation provided
+by the JRE will be used. To use the Common Annotations 1.1 provided by
+Tomcat, use the endorsed mechanism of the JVM. The default configuration
+defines JARs located in "$CATALINA_HOME/endorsed" as endorsed.
 
 
 ================================================================
